--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -416,6 +416,38 @@ h3 {
     padding: .2rem;
 }
 
+.playback-container {
+    width: 100%;
+    height: 30px;
+    position: absolute;
+    left: 0px;
+    top: -63px;
+    background-color: lightgreen;
+    text-align: middle;
+}
+
+.play-pause-container {
+    border: black 1px solid;
+    background-color: grey;
+    width: 20px;
+    height: 20px;
+    margin: auto;
+    text-align: center;
+}
+
+.play-button {
+    position: relative;
+    left: 5px;
+    border-style: solid;
+    border-width: .6em 0 .6em 1em;
+    border-color: transparent transparent transparent #000;
+}
+
+.pause-button {
+    font-weight: 900;
+    font-size: 1.2rem;
+}
+
 .timestamp-container {
     width: 100%;
     height: 30px;
