--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -421,9 +421,10 @@ h3 {
     height: 30px;
     position: absolute;
     left: -1px;
-    top: -65px;
-    background-color: rgb(226, 226, 226);
-    border: black solid 1px;
+    top: -34px;
+    background-color: rgb(240, 240, 240);
+    border: grey solid 1px;
+    border-bottom: grey solid 3px;
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -450,13 +451,12 @@ h3 {
     width: 100%;
     height: 30px;
     position: absolute;
-    border-bottom: 3px solid grey;
+    border-bottom: 1px solid black;
     left: 0px;
-    top: -33px;
+    top: -64px;
     text-align: middle;
     background-color: lightsteelblue;
     line-height: 28px;
-    /* padding: .3rem; */
     z-index: 100;
 }
 
@@ -469,7 +469,6 @@ h3 {
     position: absolute;
     bottom: 0;
     width: 100%;
-    border: black 1px solid;
     height: 250px;
     white-space: nowrap;
     min-width: 1200px;
