--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -427,7 +427,7 @@ h3 {
     border-bottom: grey solid 3px;
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: center;
 }
 
 .playback-container * {
@@ -435,12 +435,23 @@ h3 {
 }
 
 .step-backward, .step-forward, .play-pause {
-    margin: 0 .4rem;
+    margin: 0 .3rem;
     display: inline-block;
 }
 
 .play-pause:hover, .minus:hover, .plus:hover, .step-backward:hover, .step-forward:hover {
     color: grey !important;
+}
+
+.speed {
+    margin-left: 1rem;
+}
+
+.speed-label {
+    top: -3px;
+    position: relative;
+    font-size: .5rem;
+    margin-right: .2rem;
 }
 
 .minus {
