--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -512,12 +512,6 @@ h3 {
     pointer-events: all;
 }
 
-.hover-border {
-    position: absolute;
-    height: 10px;
-    width: 100%;
-}
-
 .context-menu-container {
     position: absolute;
     max-width: 400px;
@@ -528,6 +522,13 @@ h3 {
     padding: .7rem;
     transition: visibility 0s, opacity 0.1s linear;
     white-space: normal;
+    z-index: 10;
+}
+
+.context-disable {
+    position: absolute;
+    width: 100%;
+    height: 20px;
 }
 
 .timeline-label {
